fixed about me section and my work to have smaller gap

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html, body{
 
          /*SLIKI ZA ABOUT ME*/
 
-#about{
+.about{
   padding: 80px 0;
   color: rgb(255, 255, 255);
 }
